[package]
name = "aoc"
version = "0.1.0"
authors = ["Johann Homonnai <github.com/murasakiwano>"]
edition = "2021"
default-run = "aoc"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
itertools = "0.11.0"
nom = "7.1.3"
thiserror = "1.0.43"
